--- a/mandelbulber2/formula/ui/spheretree_v4.ui
+++ b/mandelbulber2/formula/ui/spheretree_v4.ui
@@ -698,7 +698,7 @@ Use small ray step multiplier settings</string>
         <item>
          <widget class="QLabel" name="label_307">
           <property name="text">
-           <string>post scale:</string>
+           <string>scale:</string>
           </property>
          </widget>
         </item>
@@ -835,17 +835,10 @@ Use small ray step multiplier settings</string>
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="2" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
-          <property name="text">
-           <string>disable hybrid color</string>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_180">
           <property name="text">
-           <string>aux.DE offseff00</string>
+           <string>aux.DE offset</string>
           </property>
          </widget>
         </item>
@@ -1001,6 +994,13 @@ Use small ray step multiplier settings</string>
          </widget>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="MyCheckBox" name="checkBox_transf_function_enabledC_false">
+        <property name="text">
+         <string>disable hybrid color</string>
+        </property>
+       </widget>
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_20" columnstretch="0,1">
