--- a/mandelbulber2/formula/ui/spheretree_v5.ui
+++ b/mandelbulber2/formula/ui/spheretree_v5.ui
@@ -485,7 +485,7 @@ Use small ray step multiplier settings</string>
       <item>
        <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
         <property name="text">
-         <string>disable curve recurse</string>
+         <string> initial curve recurse condition = false</string>
         </property>
        </widget>
       </item>
@@ -688,7 +688,7 @@ Use small ray step multiplier settings</string>
               <double>99.998999999999995</double>
              </property>
              <property name="singleStep">
-              <double>0.100000000000000</double>
+              <double>0.010000000000000</double>
              </property>
             </widget>
            </item>
@@ -825,7 +825,7 @@ Use small ray step multiplier settings</string>
               <number>6</number>
              </property>
              <property name="minimum">
-              <double>0.000000000000000</double>
+              <double>-99.998999999999995</double>
              </property>
              <property name="maximum">
               <double>99.998999999999995</double>
@@ -914,7 +914,7 @@ Use small ray step multiplier settings</string>
            <double>100.000000000000000</double>
           </property>
           <property name="singleStep">
-           <double>0.100000000000000</double>
+           <double>0.010000000000000</double>
           </property>
          </widget>
         </item>
@@ -991,47 +991,15 @@ Use small ray step multiplier settings</string>
        <number>2</number>
       </property>
       <item>
-       <layout class="QGridLayout" name="gridLayout_38" columnstretch="0,1">
+       <layout class="QGridLayout" name="gridLayout_45" columnstretch="0,0,1">
         <property name="spacing">
          <number>2</number>
         </property>
-        <item row="0" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
-          <property name="text">
-           <string>swap to z.z / DE mode</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="1">
-         <widget class="QLabel" name="label_178">
-          <property name="text">
-           <string>(slower) sometimes better quality</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
-          <property name="text">
-           <string>swap to alternative DE</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_14" stretch="0,1">
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <item>
-         <widget class="QLabel" name="label_308">
-          <property name="text">
-           <string>b0:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
+        <item row="1" column="2">
          <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleB_0">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="sizePolicy">
            <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
             <horstretch>0</horstretch>
@@ -1048,13 +1016,79 @@ Use small ray step multiplier settings</string>
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>0.000000000000000</double>
+           <double>-99.998999999999995</double>
           </property>
           <property name="maximum">
            <double>99.998999999999995</double>
           </property>
           <property name="singleStep">
            <double>0.010000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledE_false">
+          <property name="text">
+           <string>swap to z.z / DE mode</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="2">
+         <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleC_0">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="prefix">
+           <string/>
+          </property>
+          <property name="suffix">
+           <string/>
+          </property>
+          <property name="decimals">
+           <number>6</number>
+          </property>
+          <property name="minimum">
+           <double>-99.998999999999995</double>
+          </property>
+          <property name="maximum">
+           <double>99.998999999999995</double>
+          </property>
+          <property name="singleStep">
+           <double>0.010000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QLabel" name="label_306">
+          <property name="text">
+           <string>mix:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
+          <property name="text">
+           <string>swap to alternative DE</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_307">
+          <property name="text">
+           <string>mix:</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="3">
+         <widget class="QLabel" name="label_178">
+          <property name="text">
+           <string>alternative DE is slower,  sometimes better quality</string>
           </property>
          </widget>
         </item>
@@ -1084,7 +1118,7 @@ Use small ray step multiplier settings</string>
          <item>
           <widget class="MyCheckBox" name="checkBox_transf_function_enabledF_false">
            <property name="text">
-            <string>abs off</string>
+            <string>abs() off</string>
            </property>
           </widget>
          </item>
@@ -1993,34 +2027,34 @@ offset:</string>
  <resources/>
  <connections>
   <connection>
-   <sender>checkBox_transf_function_enabled_false</sender>
+   <sender>checkBox_transf_function_enabledE_false</sender>
    <signal>toggled(bool)</signal>
-   <receiver>spinboxInt_transf_start_iterations_C</receiver>
-   <slot>setDisabled(bool)</slot>
+   <receiver>spinbox_transf_scaleC_0</receiver>
+   <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>21</x>
-     <y>465</y>
+     <x>92</x>
+     <y>878</y>
     </hint>
     <hint type="destinationlabel">
-     <x>284</x>
-     <y>494</y>
+     <x>275</x>
+     <y>884</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>checkBox_transf_function_enabled_false</sender>
+   <sender>checkBox_transf_function_enabledO_false</sender>
    <signal>toggled(bool)</signal>
-   <receiver>spinboxInt_transf_stop_iterations_C</receiver>
-   <slot>setDisabled(bool)</slot>
+   <receiver>spinbox_transf_scaleB_0</receiver>
+   <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>28</x>
-     <y>456</y>
+     <x>61</x>
+     <y>903</y>
     </hint>
     <hint type="destinationlabel">
-     <x>748</x>
-     <y>492</y>
+     <x>297</x>
+     <y>913</y>
     </hint>
    </hints>
   </connection>
